tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__HeliothermalPlas-mr9r3y_kQbWxO2Gm_RvEIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3450955464363983906,
  "prerequisites": [
    15584223032475393689,
    9636929862141407210
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As understanding of graviton shards continues to improve, better control over the materials they manipulate can be achieved. Graviton shards provide an alternative to electromagnetic containment of plasma using spacetime manipulation instead, allowing the Forge to directly output processed materials as plasma.\n\n[note]The third module of the Godforge, Heliothermal Plasma Fabricator can directly convert materials into their plasma form, at the cost of an immense amount of power. This may not be ideal for every plasma, but can save a lot of time on particularly slow ones. Additionally, later upgrades allow the creation of exotic plasmas which cannot be created through other means.[/note]\n\n[note]Usage of this module requires the GPCI upgrade.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lHeliothermal Plasma Fabricator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15584223032475393689,
    9636929862141407210
  ],
  "rewards": [],
  "tasks": []
}
