tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__SpaceModulesGalo-nghPgh6-TuSKXUlzGXGrpw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2215294808299252647,
  "prerequisites": [
    15490774631735871952
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Better modules will require a more advanced Space Elevator motor to function.\n\nThis upgrade will allow you to access 15 modules on your Space Elevator. If you haven't built the expansion yet, now might be a good time.\n\n[note]You can enable the Space Elevator expansion in the GUI.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Space Modules Galore",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15490774631735871952
  ],
  "rewards": [],
  "tasks": []
}
