tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__TheCatisOutofthe-RAH2M4DoTTaX5a2Sj4hRcQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9288759128183296369,
  "prerequisites": [
    8519757157673233156
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After many hours of grind, blood, sweat, tears, and a little bit of transcendent metal...\nYou are now finally able to solve mankind's hardest puzzle ever, clicking boxes randomly.\n\nThe §cUncertainty Resolution§r, §oa Dyson user's wet dream§r, will allow you to completely skip that annoying puzzle when you need to set some (probably a lot.) Quantum Computers up.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Cat is Out of the Box",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8519757157673233156
  ],
  "rewards": [],
  "tasks": []
}
