tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__TheDarknessofCho-AAAAAAAAAAAAAAAAAAAJbQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2413,
  "prerequisites": [
    3237,
    8519757157673233156
  ],
  "properties": {
    "auto_claim": false,
    "desc": "\nIn order to get to the riches you rightfully deserve, you'll first need to make a Raw Portal, then complete it with more materials. You can then access this dimension that should contain every ore imaginable...\n\n[note]Unfortunately, those tasty ores are locked beneath the mantle of the planet. You'll need to use a Void Miner to get them out.[/note]\n\n[note]This should help with the Tartarite problems due to Proto-Halkonite Steel Base.[/note]\n\n[warn]If there is ever an ore that you need but cannot find, it's guaranteed to be gatherable from this dimension.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Darkness of Choice for Edgelords",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3237,
    8519757157673233156
  ],
  "rewards": [],
  "tasks": []
}
