tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__TheRealPlanetEat-GHobGJFEQzK1q96l6oC8wQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10467565319877606593,
  "prerequisites": [
    2215294808299252647,
    15490774631735871952
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It has 8 parallels and supports higher tiers of drones.\n\n[note]You can obtain pure platinum group metals with this. It would be a nice boost if you haven't made the QFT for it yet.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Real Planet Eater",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2215294808299252647,
    15490774631735871952
  ],
  "rewards": [],
  "tasks": []
}
